fixed spacing and md parsing in questions

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -69,13 +69,17 @@ h3 {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 30px;
+    margin: 20px 0 10px 0;
 }
 
 .header-logo {
     width: 80px;
     height: auto;
     margin-left: 20px;
+}
+
+.question-title h1 {
+    margin: 0;
 }
 
 /* -------------------------------------------------------------------
@@ -161,7 +165,7 @@ h3 {
     background: var(--background-light);
     padding: 30px;
     border-radius: 12px;
-    margin: 30px 0;
+    margin: 10px 0 30px 0;
     border: 1px solid var(--border-color);
     box-shadow: var(--card-shadow);
 }
